fix search history not showing, rewrite OutlineNoneWhenUsingMouse -> useNoOutlineWhenUsingMouse

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -11,6 +11,21 @@
   }
 }
 
+*:focus {
+  position: relative;
+  z-index: 999;
+  outline: 2px solid #ffc400e3;
+  outline-offset: 2px;
+  animation: outline ease 0.1s;
+}
+
+@keyframes outline {
+  0% {
+    outline-offset: 10px;
+    outline-width: 5px;
+  }
+}
+
 .using-mouse :focus {
   outline: none;
 }
